Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -2,50 +2,54 @@
 {"dg-publish":true,"permalink":"/Классы/Жрец/"}
 ---
 
+Механики
+	Безумие #ШП 
 
 Способности 
 	Божественный дух
-	Божественный гимн #Свет
+	Божественный гимн #Холи
 	Быстрое исцеление
 	Великое исцеление 
 	Взрыв разума
 	Внутреннее зрение #Сигн 
 	Внутреннее сосредоточие #ДЦ
 	Внутренний огонь
-	Воскрешение
-	Всепожирающая тьма
+	Всепожирающая тьма #ШП 
+	Вхождение в бездну
 	Гимн надежды
 	Глубинный ужас #ШП 
-	Дух воздаяния
-	Защита от страха
+	Дух воздаяния #Холи
+	Духовное рвение
+	Защита от страха #Сигн 
 	Защита от темной магии
 	Излечение болезни
 	Исповедь
 	Иссушение разума
 	Исчадие тьмы
 	Кара #Сигн
+	Колодец света #Холи 
 	Кольцо света
 	Контроль над разумом
-	Круг исцеления
+	Круг исцеления #Холи 
 	Левитация
 	Массовое рассеивание
 	Ментальный крик
 	Молитва восстановления
 	Молитва исцеления 
 	Молитва отчаяния
-	Оберег души
+	Оберег души #ДЦ 
 	Оберегающий души
-	Облик тьмы
+	Облик тьмы #ШП 
 	Обновление 
-	Объятия вампира
-	Подавление боли
+	Объятия вампира #ШП 
+	Подавление боли #ДЦ 
 	Придание сил
 	Прикосновение вампира
 	Пытка разума
 	Рассеивание заклинаний
 	Связующее исцеление
 	Священный огонь
-	Складывание нежити
+	Складывание нежити #Сигн 
 	Слияние с тьмой #ШП
 	Слово силы Стойкость
 	Слово силы щит
