Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -5,70 +5,74 @@
 Механики
 	Безумие #ШП 
 
-Способности 
-	Божественный дух
-	Божественный гимн #Холи
-	Быстрое исцеление
-	Великое исцеление 
-	Взрыв разума
-	Внутреннее зрение #Сигн 
-	Внутреннее сосредоточие #ДЦ
-	Внутренний огонь
-	Всепожирающая тьма #ШП 
-	Вхождение в бездну
-	Гимн надежды
-	Глубинный ужас #ШП 
-	Дух воздаяния #Холи
-	Духовное рвение
-	Защита от страха #Сигн 
-	Защита от темной магии
-	Излечение болезни
-	Исповедь
-	Иссушение разума
-	Исчадие тьмы
-	Кара #Сигн
-	Колодец света #Холи 
-	Кольцо света
-	Контроль над разумом
-	Круг исцеления #Холи 
-	Левитация
-	Массовое рассеивание
-	Ментальный крик
-	Молитва восстановления
-	Молитва исцеления 
-	Молитва отчаяния
-	Оберег души #ДЦ 
-	Оберегающий души
-	Облик тьмы #ШП 
-	Обновление 
-	Объятия вампира #ШП 
-	Подавление боли #ДЦ 
-	Придание сил
-	Прикосновение вампира
-	Пытка разума
-	Рассеивание заклинаний
-	Связующее исцеление
-	Священный огонь
-	Складывание нежити #Сигн 
-	Слияние с тьмой #ШП
-	Слово силы Стойкость
-	Слово силы щит
-	Слово тьмы боль
-	Слово тьмы смерть 
-	Сожжение маны
-	Смирение
-	Уход в тень
-	Безмолвие
+
 
 1 уровень 
+	Кара #Сигн #Фокус
+	Внутренний огонь #Фокус 
+	Слово тьмы Боль #Фокус 
+	Слово силы Щит
+	Взрыв разума
+	Быстрое исцеление
 2 уровень 
+	Излечение болезни #Сигн 
+	Слово силы Сияние #ДЦ 
+	Священный огонь #Холи 
+	Пытка разума #ШП 
+	Божественный дух
+	Слово силы Стойкость
+	Всепожирающая чума
 3 уровень 
+	Внутреннее зрение #Сигн 
+	Обновление
+	Ментальный крик
+	Кольцо света
+	Уход в тень
 4 уровень 
+	Внутреннее сосредоточие #ДЦ
+	Колодец света #Холи 
+	Облик тьмы #ШП 
+	Усмирение
+	Сожжение маны
+	Безмолвие
 5 уровень 
+	Сковывание нежити #Сигн 
+	Левитация
+	Великое исцеление 
+	Божественное перышко
 6 уровень
+	Защита от страха #ДЦ 
+	Круг исцеления #Холи 
+	Прикосновение вампира #ШП 
+	Защита от темной магии
+	Щупальца бездны
+	Рассеивание заклинаний #Фокус 
 7 уровень 
+	Духовное рвение #Сигн 
+	Молитва исцеления
+	Иссушение разума
+	Гимн надежды
 8 уровень 
+	Придание сил #ДЦ 
+	Дух воздаяния #Холи
+	Глубинный ужас #ШП 
+	Массовое рассеивание
 9 уровень
+	Слово тьмы смерть 
+	Вознесение
 10 уровень 
+	Подавление боли #ДЦ 
+	Оберегающий дух #Холи 
+	Объятия вампира #ШП 
+	Контроль над разумом
+	Исчадие тьмы 
 11 уровень 
+	Вхождение в бездну
+	Божественный гимн
 12 уровень 
+	Исповедь #ДЦ
+	Молитва отчаяния #Холи
+	Слияние с тьмой #ШП
+
+Способности 
+	Связующее исцеление
