Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -7,27 +7,79 @@
 
 
 
-1 уровень 
-	Кара #Сигн #Фокус
-	Внутренний огонь #Фокус 
-	Слово тьмы Боль #Фокус 
-	Слово силы Щит
-	Взрыв разума
-	Быстрое исцеление
-2 уровень 
-	Излечение болезни #Сигн 
-	Слово силы Сияние #ДЦ 
-	Священный огонь #Холи 
-	Пытка разума #ШП 
-	Божественный дух
-	Слово силы Стойкость
-	Всепожирающая чума
+## 1 уровень 
+
+### Кара
+Заговор
+1 Действие, 60 футов, мгновенно 
+Выберите живое существо в пределах дальности. Его окатывает карающая энергия света и оно получает 1d8 светлого урона, если не преуспеет в спасброске Ловкости. Злые существа помимо этого будут светиться на 5 футов вокруг себя в течение одного хода.
+Урон увеличивается на 1d8 на 5 и 11 уровне.
+
+### Внутренний огонь
+Заговор
+1 Действие, на себя, мгновенно
+Жреца наполняет сила света и его класс брони увеличивается на 2. После того, как Жрец стал целью безуспешной атаки действие эффекта заканчивается.
+
+### Слово тьмы: Боль
+Заговор
+1 Действие, 40 футов, 1 минута
+Зачаровывает выбранное существо. В начале каждого своего хода оно будет получать 1d4 тёмного урона. Если после этого оно преуспеет в спасброске Выносливости, чары рассеиваются.
+Урон увеличивается на 1d4 на 5 и 11 уровне.
+
+### Слово силы: Щит
+Ячейка заклинания 1 уровня
+1 Действие, 40 футов, 1 час
+Выбранное существо или самого Жреца окружает едва видимый барьер, который дарует ему 1d4+4 временных хитов.
+За каждый дополнительный уровень потраченной ячейки, это заклинание даёт на 5 временных хитов больше 
+
+### Взрыв разума
+Ячейка заклинания 1 уровня
+1 Действие, 60 футов, 6 секунд
+Безумие пронзает разум выбранного существа. Если оно не преуспеет в спасброске Духа, то получит 1d10 психического урона и становится ошеломлённым на 1 ход.
+
+### Быстрое исцеление
+Ячейка заклинания 1 уровня 
+1 Бонусное Действие, 60 футов, мгновенно 
+Призывает свет, исцеляющий выбранное существо на количество хитов, равное 1d4 + модификатор Духа. Не оказывает действия на конструктов.
+
+## 2 уровень 
+### Излечение болезни
+Постоянная
+1 использование до полного отдыха
+1 Действие, касание, мгновенно.
+Излечивает существо от одной выбранной болезни. 
+
+### Слово силы Сияние
+Постоянная (Послушание)
+Ячейка заклинания 1 уровня
+1 Действие, 40 футов, 1 минута
+Свет восстанавливает выбранному существу 1d10 хитов, а также полностью восстанавливает любые временные хиты, которые в данный момент на него действуют.
+
+### Священный огонь
+Постоянная (Свет)
+Ячейка заклинания 1 уровня
+1 Действие, 60 футов, мгновенно
+Совершите атаку струёй жгучего света против выбранного существа. При попадании оно получает 1d8 светлого и 1d8 огненного урона. Это заклинание можно использовать против существ, находящихся в полной тьме без помехи (если они не имеют полного укрытия).
+
+### Пытка разума
+Постоянная (Тьма)
+Ячейка заклинания 1 уровня 
+1 Действие, 60 футов, 1 минута
+Направляет в выбранное существо поток тёмной энергии, наносящее 1d10 психического урона, если оно не преуспеет в спасброске Духа. Пока заклинание действует вы можете использовать Действие, чтобы автоматически нанести 1d10 психического урона. Заклинание прерывается досрочно, если Жрец сдвинется с места, использует другое Действие, а также если цель покинет радиус действия.
+
+### Божественный дух
+Ячейка заклинания 1 уровня
+1 Действие, 40 футов, 1 час
+Укрепляет боевой дух всех участников группы в радиусе действия. Они получают преимущество при проверках Духа.
+
+Слово силы Стойкость
+Всепожирающая чума
 3 уровень 
-	Внутреннее зрение #Сигн 
-	Обновление
-	Ментальный крик
-	Кольцо света
-	Уход в тень
+Внутреннее зрение #Сигн 
+Обновление
+Ментальный крик
+Кольцо света
+Уход в тень
 4 уровень 
 	Внутреннее сосредоточие #ДЦ
 	Колодец света #Холи 
