Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -12,13 +12,14 @@
 ### Кара
 Заговор
 1 Действие, 60 футов, мгновенно 
-Выберите живое существо в пределах дальности. Его окатывает карающая энергия света и оно получает 1d8 светлого урона, если не преуспеет в спасброске Ловкости. Злые существа помимо этого будут светиться на 5 футов вокруг себя в течение одного хода.
+Выберите существо в пределах дальности. Его окатывает карающая энергия света и оно получает 1d8 светлого урона, если не преуспеет в спасброске Ловкости. Злые существа помимо этого будут светиться на 5 футов вокруг себя в течение одного хода.
 Урон увеличивается на 1d8 на 5 и 11 уровне.
+Не действует на конструктов.
 
 ### Внутренний огонь
 Заговор
-1 Действие, на себя, мгновенно
-Жреца наполняет сила света и его класс брони увеличивается на 2. После того, как Жрец стал целью безуспешной атаки действие эффекта заканчивается.
+1 Действие, на себя, мгновенно, Концентрация
+Жреца наполняет сила света и его класс брони увеличивается на 3. После того, как Жрец стал целью безуспешной атаки действие эффекта заканчивается.
 
 ### Слово тьмы: Боль
 Заговор
@@ -42,17 +43,20 @@
 1 Бонусное Действие, 60 футов, мгновенно 
 Призывает свет, исцеляющий выбранное существо на количество хитов, равное 1d4 + модификатор Духа. Не оказывает действия на конструктов.
 
+
+
 ## 2 уровень 
 ### Излечение болезни
 Постоянная
-1 использование до полного отдыха
+1 использование до полного отдыха*
 1 Действие, касание, мгновенно.
 Излечивает существо от одной выбранной болезни. 
+Получает ещё одно использование на 8 уровне.
 
 ### Слово силы Сияние
 Постоянная (Послушание)
 Ячейка заклинания 1 уровня
-1 Действие, 40 футов, 1 минута
+1 Действие, 30 футов, 1 минута
 Свет восстанавливает выбранному существу 1d10 хитов, а также полностью восстанавливает любые временные хиты, которые в данный момент на него действуют.
 
 ### Священный огонь
@@ -64,67 +68,113 @@
 ### Пытка разума
 Постоянная (Тьма)
 Ячейка заклинания 1 уровня 
-1 Действие, 60 футов, 1 минута
-Направляет в выбранное существо поток тёмной энергии, наносящее 1d10 психического урона, если оно не преуспеет в спасброске Духа. Пока заклинание действует вы можете использовать Действие, чтобы автоматически нанести 1d10 психического урона. Заклинание прерывается досрочно, если Жрец сдвинется с места, использует другое Действие, а также если цель покинет радиус действия.
+1 Действие, 30 футов, 1 минута, Концентрация
+Направляет в выбранное существо поток тёмной энергии, наносящее 1d10 психического урона, если оно не преуспеет в спасброске Духа. Если спасбросок провален, то пока заклинание активно вы можете использовать Действие, чтобы автоматически нанести 1d10 психического урона. Заклинание прерывается досрочно, если Жрец сдвинется с места, использует другое Действие, а также если цель покинет радиус действия.
 
 ### Божественный дух
 Ячейка заклинания 1 уровня
-1 Действие, 40 футов, 1 час
-Укрепляет боевой дух всех участников группы в радиусе действия. Они получают преимущество при проверках Духа.
+1 Действие, 30 футов вокруг себя, 1 час
+Укрепляет боевой дух всех участников группы в радиусе действия. Они получают преимущество при проверках Духа, а также +1 к силе заклинаний, если основная характеристика — это Дух.
 
-Слово силы Стойкость
-Всепожирающая чума
-3 уровень 
-Внутреннее зрение #Сигн 
-Обновление
-Ментальный крик
-Кольцо света
-Уход в тень
-4 уровень 
-	Внутреннее сосредоточие #ДЦ
-	Колодец света #Холи 
-	Облик тьмы #ШП 
-	Усмирение
-	Сожжение маны
-	Безмолвие
+### Слово силы Стойкость
+Ячейка заклинания 1 уровня 
+1 Действие, 30 футов вокруг себя, 1 час
+Укрепляет тела всех участников группы в радиусе действия. Увеличивает максимальное количество хитов на 4 (+4 за каждый дополнительный уровень потраченной ячейки)
+
+### Всепожирающая чума
+Ячейка заклинания 1 уровня
+1 Действие, 60 футов, 1 минута
+Заражает выбранное живое существо опасной болезнью, если оно не преуспеет в спасброске Выносливости. В начале своего следующего хода это существо получает 1d6 тёмного урона, а Жрец восстанавливает себе столько же хитов. Затем чума передаётся случайному ближайшему существу в пределах 15 футов. Если таких существ нет или новый носитель преуспеет в спасброске Выносливости, болезнь рассеивается.
+Не действует на конструктов.
+
+
+
+## 3 уровень 
+
+### Внутреннее зрение
+Постоянная
+1 использование до полного отдыха
+1 Действие, 60 футов, 1 минута, Концентрация
+Жрец перемещает своё зрение в выбранное существо и начинает смотреть на мир его глазами. В это время Жрец теряет собственное зрение и автоматически проваливает все проверки связанные с ним, однако может проходить такие проверки как обычно, используя зрение цели. Жрец всё ещё контролирует своё тело, он может передвигаться и совершать Действия и разговаривать. Если цель преуспеет в спасброске Интеллекта, то узнает, что кто-то смотрит его глазами. Жрец может по желанию закончить действие эффекта.
+
+### Обновление
+Ячейка заклинания 2 уровня
+1 Действие, 30 футов, 30 секунд, Концентрация
+Накладывает на выбранное существо ауру восстановления. В начале своего хода оно исцеляется на 1d4 хитов.
+
+### Ментальный крик
+Ячейка заклинания 2 уровня 
+1 Действие, 30 футов вокруг себя, 1 минута, Концентрация
+Вызывает пронзительный крик прямо в головах у всех противников в радиусе действия. Все, кто его услышит становятся напуганными Жрецом, оглушёнными и начинают кричать, если не преуспеют в спасброске Духа. Существа могут повторять спасбросок вы конце каждого своего хода, чтобы избавиться от эффекта.
+
+### Кольцо света
+Ячейка заклинания 2 уровня
+1 Действие, 30 футов вокруг себя, мгновенно
+От Жреца расходится сфера света, которая на мгновение освещает пространство. Всё союзники в области действия восстанавливают 1d4 здоровья, а противники получают 1d6 светлого урона.
+
+### Уход в тень
+Ячейка заклинания 2 уровня
+1 Реакция, на себя, 6 секунд 
+Когда Жрец становится целью атаки, он может создать вокруг себя клуб тьмы радиусом 5 футов до начала своего хода. Эта, а также все последующие атаки против Жреца или других существ, окутанных тьмой совершаются с помехой.
+
+
+
+## 4 уровень 
+
+### Внутреннее сосредоточие
+Послушание
+Улучшает самообладание и внимание Жреца. Он может концентрироваться на двух заклинаниях одновременно.
+
+### Колодец света
+
+
+### Облик тьмы
+Постоянная (Тьма)
+1 использование до короткого отдыха
+1 Бонусное действие, на себя, 1 час
+
+
+Усмирение
+Сожжение маны
+Безмолвие
 5 уровень 
-	Сковывание нежити #Сигн 
-	Левитация
-	Великое исцеление 
-	Божественное перышко
+Сковывание нежити #Сигн 
+Левитация
+Великое исцеление 
+Божественное перышко
 6 уровень
-	Защита от страха #ДЦ 
-	Круг исцеления #Холи 
-	Прикосновение вампира #ШП 
-	Защита от темной магии
-	Щупальца бездны
-	Рассеивание заклинаний #Фокус 
+Защита от страха #ДЦ 
+Круг исцеления #Холи 
+Прикосновение вампира #ШП 
+Защита от темной магии
+Щупальца бездны
+Рассеивание заклинаний #Фокус 
 7 уровень 
-	Духовное рвение #Сигн 
-	Молитва исцеления
-	Иссушение разума
-	Гимн надежды
+Духовное рвение #Сигн 
+Молитва исцеления
+Иссушение разума
+Гимн надежды
 8 уровень 
-	Придание сил #ДЦ 
-	Дух воздаяния #Холи
-	Глубинный ужас #ШП 
-	Массовое рассеивание
+Придание сил #ДЦ 
+Дух воздаяния #Холи
+Глубинный ужас #ШП 
+Массовое рассеивание
 9 уровень
-	Слово тьмы смерть 
-	Вознесение
+Слово тьмы смерть 
+Вознесение
 10 уровень 
-	Подавление боли #ДЦ 
-	Оберегающий дух #Холи 
-	Объятия вампира #ШП 
-	Контроль над разумом
-	Исчадие тьмы 
+Подавление боли #ДЦ 
+Оберегающий дух #Холи 
+Объятия вампира #ШП 
+Контроль над разумом
+Исчадие тьмы 
 11 уровень 
-	Вхождение в бездну
-	Божественный гимн
+Вхождение в бездну
+Божественный гимн
 12 уровень 
-	Исповедь #ДЦ
-	Молитва отчаяния #Холи
-	Слияние с тьмой #ШП
+Исповедь #ДЦ
+Молитва отчаяния #Холи
+Слияние с тьмой #ШП
 
 Способности 
-	Связующее исцеление
+Связующее исцеление
