Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -111,6 +111,7 @@
 Ячейка заклинания 2 уровня
 1 Действие, 30 футов вокруг себя, мгновенно
 От Жреца расходится сфера света, которая на мгновение освещает пространство. Всё союзники в области действия восстанавливают 1d4 здоровья, а противники получают 1d6 светлого урона.
+Увеличивает исцеление на 1d4, а урон на 1d6 за каждый дополнительный уровень потраченной ячейки.
 
 ### Уход в тень
 Ячейка заклинания 2 уровня
@@ -122,21 +123,33 @@
 ## 4 уровень 
 
 ### Внутреннее сосредоточие
-Послушание
+Постоянная (Послушание)
 Улучшает самообладание и внимание Жреца. Он может концентрироваться на двух заклинаниях одновременно.
 
 ### Колодец света
-
+Постоянная (Свет)
 
 ### Облик тьмы
 Постоянная (Тьма)
 1 использование до короткого отдыха
 1 Бонусное действие, на себя, 1 час
+Жрец отрекается от света и полностью покрывается видимой для других существ тёмной оболочкой. Любой свет в пределах 5 футов от Жреца тухнет, а сам Жрец не может светиться. Если Жрец находится в слабо освещённой местности, атаки против него совершаются с помехой. Любой тёмный или психический урон исходящий от Жреца наносится с улучшенными на одну категорию кубиками (d6 вместо d4 и т.д.) вплоть до d12. Эффект прерывается досрочно, если Жрец начнёт читать заклинания света.
 
+### Усмирение
+Ячейка заклинания 2 уровня 
+1 Действие, 60 футов, 1 час, Концентрация 
+Успокаивает выбранное не враждебное существо, оно начинает относиться ко всему более взвешенно и рассудительно. Оно с меньшей вероятностью нападёт на вас или кого-либо ещё. Эффект прерывается досрочно если цель получит урон, вступит в бой или уже находится в нём. По окончании эффекта цель узнает, что на неё влияли магией и, возможно, станет ещё агрессивнее.
 
-Усмирение
-Сожжение маны
-Безмолвие
+### Сожжение маны
+Ячейка заклинания 2 уровня
+1 Действие, 60 футов, мгновенно
+Лишает выбранное существо магической силы. Сжигает одну ячейку заклинания, уровень которой не превышает уровень потраченной ячейки более чем на 1.
+
+### Безмолвие
+Ячейка заклинания 2 уровня 
+1 Реакция, 60 футов, 1 минута, Концентрация
+Когда в пределах видимости Жреца, кто-то начинает читать заклинание, Жрец может отменить его, если цель не пройдёт спасбросок Интеллекта. Для этого нужно потратить ячейку уровнем не меньше, чем уровень ячейки читаемого заклинания
+
 5 уровень 
 Сковывание нежити #Сигн 
 Левитация
