Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -42,6 +42,7 @@
 Ячейка заклинания 1 уровня 
 1 Бонусное Действие, 60 футов, мгновенно 
 Призывает свет, исцеляющий выбранное существо на количество хитов, равное 1d4 + модификатор Духа. Не оказывает действия на конструктов.
+Увеличивает исцеление на 1d4 за каждую дополнительный уровень потраченной ячейки.
 
 
 
@@ -148,15 +149,38 @@
 ### Безмолвие
 Ячейка заклинания 2 уровня 
 1 Реакция, 60 футов, 1 минута, Концентрация
-Когда в пределах видимости Жреца, кто-то начинает читать заклинание, Жрец может отменить его, если цель не пройдёт спасбросок Интеллекта. Для этого нужно потратить ячейку уровнем не меньше, чем уровень ячейки читаемого заклинания
+Когда в пределах видимости Жреца, кто-то начинает читать заклинание, Жрец может отменить его, если цель не пройдёт спасбросок Интеллекта. Для отмены нужно потратить ячейку уровнем не меньше, чем уровень ячейки читаемого заклинания.
 
-5 уровень 
-Сковывание нежити #Сигн 
-Левитация
-Великое исцеление 
-Божественное перышко
-6 уровень
-Защита от страха #ДЦ 
+
+
+## 5 уровень 
+
+### Сковывание нежити
+Постоянная
+1 использование до короткого отдыха
+1 Действие, 60 футов, 1 минута, Концентрация
+Сдерживает выбранную нежить. Цель становится опутанной, если не пройдёт спасбросок Ловкости.
+
+### Левитация
+Ячейка заклинания 3 уровня
+1 Действие, касание, 1 час, Концентрация
+Наделяет выбранное существо аурой левитации. Это существо начинает парить в 5 футах над землёй с возможностью горизонтально передвигаться с обычной скоростью. Цель не может добровольно опуститься на землю. Всё броски атаки левитирующего существа, а также спасброски Ловкости осуществляются с помехой. Жрец может добровольно прервать эффект.
+
+### Великое исцеление 
+Ячейка заклинания 3 уровня 
+1 Действие, 30 футов, 6 секунд 
+Ослепляющий свет окатывает выбранное существо и исцеляет его на количество хитов, равное 3d8 + модификатор Духа. Все существа, которые видят цель становятся ослеплёнными, если не преуспеют в спасброске Выносливости.
+Увеличивает исцеление на 1d8 за каждый дополнительный уровень потраченной ячейки.
+
+### Божественное перышко
+Ячейка заклинания 3 уровня
+1 Бонусное действие, 30 футов, мгновенно
+Создайте в выбранной точке небольшое перо из чистого света. Любое существо, которое коснётся его удвоит свою скорость до конца хода (аналогично рывку).
+
+## 6 уровень
+
+## Защита от страха
+
 Круг исцеления #Холи 
 Прикосновение вампира #ШП 
 Защита от темной магии
