Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -174,8 +174,16 @@
 
 ### Божественное перышко
 Ячейка заклинания 3 уровня
-1 Бонусное действие, 30 футов, мгновенно
-Создайте в выбранной точке небольшое перо из чистого света. Любое существо, которое коснётся его удвоит свою скорость до конца хода (аналогично рывку).
+1 Бонусное действие, 30 футов, 1 минута
+Создайте в выбранной точке небольшое перо из чистого света. Любое существо, которое коснётся его удвоит свою скорость до конца хода (аналогично рывку). После этого перо растворяется.
+
+### Воскрешение
+Ячейка заклинания 3 уровня
+1 Действие, 30 футов, мгновенно
+Выберите существо, которое мертво не более 1 минуты. Прикосновение возвращает его к жизни с 1 хитом.
+Не действует на конструктов.
+
+
 
 ## 6 уровень
 
@@ -196,6 +204,7 @@
 Дух воздаяния #Холи
 Глубинный ужас #ШП 
 Массовое рассеивание
+Связующее исцеление
 9 уровень
 Слово тьмы смерть 
 Вознесение
@@ -212,6 +221,3 @@
 Исповедь #ДЦ
 Молитва отчаяния #Холи
 Слияние с тьмой #ШП
-
-Способности 
-Связующее исцеление
