Published multiple files

--- a/src/site/notes/Классы/Жрец.md
+++ b/src/site/notes/Классы/Жрец.md
@@ -2,8 +2,6 @@
 {"dg-publish":true,"permalink":"/Классы/Жрец/"}
 ---
 
-Механики
-	Безумие #ШП 
 
 
 
@@ -129,6 +127,9 @@
 
 ### Колодец света
 Постоянная (Свет)
+1 использование до полного отдыха
+1 Действие, 10 футов, 1 час
+Создаёт чашу, парящую над землёй в 3 футах (~1 метрах). Эта чаша издаёт яркий свет на расстоянии 20 футов. Чаша наполнена целебной водой. Любое существо среднего размера на расстоянии касания, которое физически способно испить из этой чаши может потратить **действие**, чтобы это сделать, таким образом восстанавливая 1d8+2 хитов. Воды в чаше хватает на 5 глотков. Как только в чаше закончилась вода или Жрец призывает другой Колодец Света, чаша растворяется.
 
 ### Облик тьмы
 Постоянная (Тьма)
@@ -159,7 +160,7 @@
 Постоянная
 1 использование до короткого отдыха
 1 Действие, 60 футов, 1 минута, Концентрация
-Сдерживает выбранную нежить. Цель становится опутанной, если не пройдёт спасбросок Ловкости.
+Сдерживает выбранную нежить. Цель становится опутанной, если не пройдёт спасбросок Ловкости. В конце каждого своего хода цель может повторять спасбросок, чтобы вырваться.
 
 ### Левитация
 Ячейка заклинания 3 уровня
@@ -193,7 +194,7 @@
 Прикосновение вампира #ШП 
 Защита от темной магии
 Щупальца бездны
-Рассеивание заклинаний #Фокус 
+Рассеивание заклинаний
 7 уровень 
 Духовное рвение #Сигн 
 Молитва исцеления
